[package]
name = "background-fission"
version = "0.2.1"
authors = ["Kate Vandermolen <kate@cerulan.net>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.21.1"
dconf_rs = "0.3.0"
job_scheduler = "1.0.6"
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
dirs = "1.0.5"
rand = "0.6.5"
thread-priority = "0.1.0"